WebKit Bugzilla
New
Browse
Search+
Log In
×
Sign in with GitHub
or
Remember my login
Create Account
·
Forgot Password
Forgotten password account recovery
RESOLVED FIXED
189170
REGRESSION(
r235489
): fast/dom/navigator-detached-no-crash.html crashes under Navigator::share
https://bugs.webkit.org/show_bug.cgi?id=189170
Summary
REGRESSION(r235489): fast/dom/navigator-detached-no-crash.html crashes under ...
Olivia Barnett
Reported
2018-08-30 13:34:38 PDT
REGRESSION(
r235489
): fast/dom/navigator-detached-no-crash.html crashes under Navigator::share
Attachments
Patch
(1.33 KB, patch)
2018-08-30 13:35 PDT
,
Olivia Barnett
no flags
Details
Formatted Diff
Diff
Patch
(1.36 KB, patch)
2018-08-30 13:42 PDT
,
Olivia Barnett
no flags
Details
Formatted Diff
Diff
Show Obsolete
(1)
View All
Add attachment
proposed patch, testcase, etc.
Olivia Barnett
Comment 1
2018-08-30 13:35:44 PDT
Created
attachment 348537
[details]
Patch
EWS Watchlist
Comment 2
2018-08-30 13:40:01 PDT
Attachment 348537
[details]
did not pass style-queue: ERROR: Source/WebCore/ChangeLog:8: You should remove the 'No new tests' and either add and list tests, or explain why no new tests were possible. [changelog/nonewtests] [5] Total errors found: 1 in 2 files If any of these errors are false positives, please file a bug against check-webkit-style.
Tim Horton
Comment 3
2018-08-30 13:40:44 PDT
Comment on
attachment 348537
[details]
Patch View in context:
https://bugs.webkit.org/attachment.cgi?id=348537&action=review
> Source/WebCore/ChangeLog:8 > + No new tests (OOPS!).
Get this outta here. Maybe "No new tests; fixing a failing existing test."
Olivia Barnett
Comment 4
2018-08-30 13:42:59 PDT
Created
attachment 348540
[details]
Patch
WebKit Commit Bot
Comment 5
2018-08-30 14:33:45 PDT
Comment on
attachment 348540
[details]
Patch Clearing flags on attachment: 348540 Committed
r235524
: <
https://trac.webkit.org/changeset/235524
>
WebKit Commit Bot
Comment 6
2018-08-30 14:33:46 PDT
All reviewed patches have been landed. Closing bug.
Radar WebKit Bug Importer
Comment 7
2018-08-31 02:54:03 PDT
<
rdar://problem/43932707
>
Note
You need to
log in
before you can comment on or make changes to this bug.
Top of Page
Format For Printing
XML
Clone This Bug