REGRESSION(r235489): fast/dom/navigator-detached-no-crash.html crashes under Navigator::share https://bugs.webkit.org/show_bug.cgi?id=189170

Patch by Olivia Barnett <obarnett@apple.com> on 2018-08-30
Reviewed by Tim Horton.

No new tests; fixing a failing existing test.

* page/Navigator.cpp:
(WebCore::Navigator::share):
Added null check for frame.

Canonical link: https://commits.webkit.org/204174@main
git-svn-id: https://svn.webkit.org/repository/webkit/trunk@235524 268f45cc-cd09-0410-ab3c-d52691b4dbfc